src/main/java/com/example/currencyexchange/model/errors/ExchangeRateAlreadyExistsException.java
package com.example.currencyexchange.model.errors;

public class ExchangeRateAlreadyExistsException extends RuntimeException {
    public ExchangeRateAlreadyExistsException(String message) {
        super(message);
    }
}
